# AlarmClock

./: .gitignore  README.md
AlarmClock/: AlarmClock.ino  CMakeLists.txt  README.md
AlarmClock/Adafruit/: CMakeLists.txt
AlarmClock/Adafruit/adafruit-busio/: CMakeLists.txt
AlarmClock/Adafruit/adafruit-epd/: CMakeLists.txt
AlarmClock/Adafruit/adafruit-gfx-library/: CMakeLists.txt
AlarmClock/DFMiniMp3/: CMakeLists.txt  DFMiniMp3.h
AlarmClock/FreeRTOS/: CMakeLists.txt  FreeRTOSConfig.h
AlarmClock/Headers/: Alarm.hpp  AlarmSet.hpp  Audio.hpp  Core1.hpp  Date.hpp  Datetime.hpp  Display.hpp  Global.hpp  List.hpp  States.hpp  StaticList.hpp  Time.hpp
AlarmClock/Source/: AlarmClock.ino  CMakeLists.txt  README.md  main.cpp
AlarmClock/Source/Headers/: Alarm.hpp  Audio.hpp  Button.hpp  Core1.hpp  Date.hpp  Datetime.hpp  Display.hpp  Encoder.hpp  Global.hpp  States.hpp  StaticList.hpp  Time.hpp
AlarmClock/Source/src/: Alarm.cpp  Audio.cpp  Button.cpp  Core1.cpp  Date.cpp  Datetime.cpp  Display.cpp  Encoder.cpp  Global.cpp  States.cpp  StaticList.cpp  Time.cpp
AlarmClock/arduino-compat/: CMakeLists.txt
AlarmClock/src/: Alarm.cpp  AlarmSet.cpp  Audio.cpp  Core1.cpp  Date.cpp  Datetime.cpp  Display.cpp  Global.cpp  List.cpp  States.cpp  Time.cpp
Data/Sounds/: README.md
Documentation/Manuals/DFPlayer/DFMiniMP3/: README.md
Documentation/Manuals/DFPlayer/DFMiniMP3/DFMiniMP3Example/: DFMiniMP3Example.ino
Documentation/Manuals/Hardware/ANO Directional Rotary Encoder/: README.md
Documentation/Manuals/Hardware/eInk Display/: README.md
Documentation/Manuals/Speaker/: README.md
Documentation/Manuals/eInk Display/: CreatingABitmap.md  README.md
Documentation/Wiring/: WiringDiagram.drawio
Other/Assets/FreeRTOS/FreeRTOS-Kernel/: tasks.c
Other/Demos/DisplayTest/: DisplayTest.ino
Other/Scripts/BitMap/: CreateBitmapFromBinaryList.py  ReadBitmap.py
